2005-09-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/config.nt: Added flags for GP_ISVAR, libPDF details,
	HAVE_STRINGIZE, string variables, datastrings, histograms, fit
	error variables, image mode, macros.  Added at least some
	comments.

2005-09-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.nt: Add a rule that makes all *.obj files
	explicitly dependent on config.h.  Explain usage a bit more
	clearly.

	* src/graphics.c (plot_image_or_update_axes): Don't dereference
	function pointer in test.

	* docs/gnuplot.texi: Regenerated.

	* docs/gnuplot.doc: Removed superfluous blanks, fixing some
	blank-only lines.

	* src/beos/Makefile.in: New file.  Edited copy of previous
	Makefile to fix out-of-source 'make dist'.

	* src/beos/Makefile: Removed.

	* configure.in: Add src/beos/Makefile to AC_OUTPUT.

2005-09-07  Lars Hecking  <lhecking@users.sourceforge.net>

	* Makefile.am, configure.in, share/Makefile.am: SUBDIRS in
	automake versions older than 1.9 can only contain direct
	children. Need a minimal, dummy Makefile.am in share/ to address
	this.

	* configure.in, share/Makefile.am, share/LaTeX/Makefile.am: Fix
	building outside source directory.

2005-09-07  Lars Hecking  <lhecking@users.sourceforge.net>

	* Makefile.am: Add share/LaTeX to SUBDIRS.

	* depcomp, install-sh, missing, mkinstalldirs: Updated from
	automake.

	* config/Makefile.am.in: Add MacOSX to EXTRA_DIST generation.

	* demo/Makefile.am.in: Add *.cfg and html to EXTRA_DIST
	generation, remove webify.pl.

	* share/LaTeX: Add top_srcdir, INSTALL_DATA, DISTFILES, install,
	distdir, clean, distclean. Clean up all and install targets.

	* src/Makefile.am: Add makefile.awc to EXTRA_DIST.

2005-09-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* show.c (show_palette_palette): Take care that print_out is
	stderr for for both NULL and stderr.

	* command.c (print_show_output): Make the test to print_out, not
	print_out_name (failed for stdout).
